--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -6,16 +6,8 @@ name: Docker
 # documentation.
 
 on:
-  schedule:
-    - cron: '30 20 * * Sun'
   push:
-    branches: ["*"]
-    # Publish semver tags as releases.
-    tags: ["v*.*.*"]
-  pull_request:
-    branches: ["{{is_default_branch}}"]
-  release:
-    types: [published]
+    branches: ["develop", "master"]
 
 env:
   # Use docker.io for Docker Hub if empty
